# another_chip8emu

./: .gitignore  LICENSE  README.md  meson.build
src/: backend.h  chip8.c  machine.c  machine.h  panic.c  panic.h
src/backends/: sdl.c
